Fixed swagger spec for adding actions.  Added more listen options.
